# AutoTestCalibCam

./: CMakeLists.txt  main.cpp
Resource/CALIBS_DIR/: K1_0.txt  K2_0.txt  P1_0.txt  P2_0.txt  R1_0.txt  R2_0.txt  d1_0.txt  d2_0.txt  t1_0.txt  t2_0.txt
Result/: res0.txt
